# Glyphs

./: .gitignore  LICENSE  README.md  classes.py  frame_selector.py  main.py  ocr.py  pyproject.toml  requirements.txt  subtitle.py  video.py
.github/workflows/: glyphs.yml
src/: frame_selector.py  main.py  video.py
src/cli/: test_args.py
src/glyphs/: main.py  ocr.py  subtitle.py  test.py
src/glyphs/cli/: __init__.py  args.py
src/glyphs/timestamp/: __init__.py  test_timestamp.py  timestamp.py
src/glyphs/video/: __init__.py  test_util.py  test_video.py  util.py  video.py
src/video/: test_video.py  video.py
test_clips/: ep5_30s_to_60s.srt
