[project]
name = "glyphs"
version = "0.0.1"
description = "CLI program to extract hardcoded video subtitles."
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "nltk>=3.9.1",
    "opencv-python>=4.11.0.86",
    "paddleocr>=2.9.1",
    "paddlepaddle==0.0.0; sys_platform == 'darwin'",
    "paddlepaddle>=2.6.2 ; sys_platform == 'linux'",
    "pytest>=8.3.5",
    "setuptools>=75.8.2",
    "srt>=3.5.3",
]

[tool.uv.sources]
# This version of PaddlePaddle is required to work around PaddleOCR hanging indefinitely on OSX. https://github.com/PaddlePaddle/PaddleOCR/issues/11706
paddlepaddle = { url = "https://paddle-wheel.bj.bcebos.com/develop/macos/macos-cpu-openblas-m1/paddlepaddle-0.0.0-cp312-cp312-macosx_14_0_arm64.whl", marker = "sys_platform == 'darwin'" }

[project.scripts]
glyphs = "glyphs.main:main"
